after cleaning and preparing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,14 @@
             android:authorities="com.magdy.flickrgallery"
             android:exported="false" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".UI.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FullScreenActivity"></activity>
+        <activity android:name=".UI.FullScreenActivity"></activity>
     </application>
 
 </manifest>
